# gitdcy

./: .gitdcy.local.example.yaml  .gitignore  Cargo.toml  LICENSE  README.md
crates/gitdcy-cli/: Cargo.toml
crates/gitdcy-cli/src/: main.rs
crates/gitdcy-core/: Cargo.toml
crates/gitdcy-core/src/: lib.rs
crates/gitdcy-gui/: Cargo.toml
crates/gitdcy-gui/src/: main.rs
