[workspace]
members = [
  "crates/gitdcy-core",
  "crates/gitdcy-cli",
  "crates/gitdcy-gui",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
eframe = "0.34.3"
egui = "0.34.3"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_norway = "0.9.42"
thiserror = "2.0.17"
walkdir = "2.5.0"
